# flask_object_recognition

./: .coverage  .gitattributes  Dockerfile  README.md  app.py  config-3.py  config.py  docker-compose.yml  pyproject.toml  test_flask_object_recognition.py
.github/workflows/: build.yaml  build.yml  flask_object_recognition.yml
.reuse/: dep5
